agregado clase BotonPais